# cspr-sentinel

./: .env.example  .gitignore  .mcp.json.example  .vercelignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json  tsconfig.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/approvals/[purchaseId]/: route.ts
apps/web/app/api/demo/report/: route.ts
apps/web/app/api/demo/run/: route.ts
apps/web/app/api/facilitator/[action]/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/mcp/: route.ts
apps/web/app/api/policies/: route.ts
apps/web/app/api/providers/asset-verification/: route.ts
apps/web/app/api/providers/risk-intelligence/: route.ts
apps/web/app/api/purchases/: route.ts
apps/web/app/api/ratings/: route.ts
apps/web/app/api/state/: route.ts
apps/web/components/: dashboard.tsx
apps/web/lib/: auth.ts  facilitator.ts  http.ts  reputation-anchor.ts  runtime.ts  x402.ts
apps/web/scripts/: fund-testnet-roles.mjs  generate-testnet-wallets.mjs
contracts/reputation/: Cargo.toml  Odra.toml  README.md  rust-toolchain.toml
contracts/reputation/src/: lib.rs
contracts/reputation/wasm/: ReputationRegistry.wasm
docs/: DEMO_SCRIPT.md  TESTNET.md
docs/demo-assets/: narration.txt
scripts/: deploy-reputation-testnet.sh  render-demo-video.sh  security-scan.mjs  testnet-preflight.mjs
