[package]
name = "cspr-sentinel-reputation"
version = "0.1.0"
edition = "2021"
description = "Bilateral reputation aggregates for CSPR Sentinel"

[dependencies]
odra = "2"

[dev-dependencies]
odra-test = "2"

[build-dependencies]
odra-build = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2"
odra-cli = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cspr_sentinel_reputation_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cspr_sentinel_reputation_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "cspr_sentinel_reputation_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
